--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,7 @@ jobs:
         git branch -l
         npm install
         npm run styleguide:build
+        mv dist/* .
     - name: info
       run: |
         ls -al
