--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@znck/prop-types": "^0.6.1",
     "dog-names": "^1.0.2",
     "lodash": "^4.17.15",
+    "primeicons": "^4.0.0",
+    "primevue": "^3.0.0",
     "vue-types": "^1.5.0"
   },
   "scripts": {
@@ -38,6 +40,7 @@
     "css-loader": "^3.6.0",
     "eslint": "^7.7.0",
     "eslint-loader": "^4.0.2",
+    "file-loader": "^6.1.1",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^0.19.0",
@@ -46,7 +49,7 @@
     "stylelint-webpack-plugin": "^2.1.0",
     "vue": "2.X.X",
     "vue-loader": "^15.2.4",
-    "vue-styleguidist": "^4.0.0",
+    "vue-styleguidist": "^4.32.2",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^4.44.1",
     "webpack-bundle-analyzer": "3.3.2"
